--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
   }
 }
 
+
 /************ Default Css ************/
 * {
   margin: 0;
@@ -44,9 +45,13 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  width: 100vw;
   /* padding-left: 15px !important;
   zoom: 108% !important; */
 }
+
+
+
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
@@ -366,6 +371,10 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   padding: 80px 0;
   position: relative;
   background-color: black;
+  border-radius: 40px;
+  width: 100vw;
+  
+  
 }
 .project h2 {
 	font-size: 45px;
@@ -525,7 +534,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /************ Projects Css ************/
 .contact {
   background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
-  padding: 60px 0 200px 0;
+
 }
 .contact img {
   width: 92%;
