--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,18 @@ a:hover {
   color: #535bf2;
 }
 
+@media (max-width: 576px) {
+  /* Set the maximum width of all elements to 100% */
+  * {
+    max-width: 100%;
+    align-items: center;
+    box-sizing: border-box; 
+    
+
+  }
+}
+
+
 body {
   margin: 0;
   display: flex;
