--- a/src/index.css
+++ b/src/index.css
@@ -22,24 +22,12 @@ a:hover {
   color: #535bf2;
 }
 
-@media (max-width: 576px) {
-  /* Set the maximum width of all elements to 100% */
-  * {
-    max-width: 100%;
-    align-items: center;
-    box-sizing: border-box; 
-    
-
-  }
-}
+/* Removed over-broad mobile rule that forced all elements to max-width and centered alignment */
 
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
